--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:site_name" content="test" />
     <meta
       property="og:image"
-      content="https://tk.ismcdn.jp/mwimgs/4/a/1140/img_4a30e7236c831a031f5b536bc5ea490628815.jpg"
+      content="https://brand.shiseido.co.jp/on/demandware.static/-/Sites-shiseido_global_jp-Library/default/contentassetimages/lp/22ss/uruoi-shindan/result01.jpg"
     />
     <meta name="twitter:card" content="summary_large_image" />
 
